test/depSplit1.slq

def main(x:ğ”¹){
	y := dup(x); // error
	if y {
		x := x;
		__show(__query("dep",y)); // âŠ¤
	}
	return x;
}
